test/preprocessor/pass/stringify.osl
#define STR(x) #x

shader foo() {
    string s = STR(1);
}
