test/preprocessor/fail/too_many_args.osl
#define TEST(x)
TEST(1, 2)
shader foo() {}
